# locust-mysql

./: .gitignore  pyproject.toml  readme.md
src/: main.py
