[tool.poetry]
name = "locust-mysql"
version = "0.1.0"
description = ""
authors = ["Jeff <mista.jeff@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
locust = "^2.31.4"
mysql = "^0.0.3"
mysql-connector-python = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
